--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.9",
     "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
